# mediashrink

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
mediashrink/: analysis.py  calibration.py  cleanup.py  cli.py  constants.py  encoder.py  gui_api.py  models.py  profiles.py  progress.py  scanner.py  session.py  wizard.py
mkv_compress/: analysis.py  cleanup.py  cli.py  encoder.py  models.py  platform_utils.py  profiles.py  progress.py  scanner.py  wizard.py
tests/: test_analysis.py  test_calibration.py  test_cleanup.py  test_cli.py  test_encoder.py  test_gui_api.py  test_profiles.py  test_progress.py  test_scanner.py  test_session.py  test_wizard.py
